add & delete entry
